1. Реализация кеша на SoftReference [#1592 #445961]